# hse2024-preferans-cpp-project

./: 10cherby.tscn-editstate-665198cf2e759167106d0a7c6f9ac7a1.cfg  10pika.tscn-editstate-81ddf20532019704cadb9107333e1481.cfg  7_kresty.tscn-editstate-280e92cfaadcf1cbd38456df9f57861c.cfg  7chervy.tscn-editstate-85949147e80f7a8ac9520cb35baae3d6.cfg  7cresty.tscn-editstate-8b26c1c093b2b18c4b9124165938d434.cfg  7pika.tscn-editstate-d7b39bfafb81679d9a07a242337c0dc5.cfg  8cresty.tscn-editstate-0306e1d06ecd063045c7adebdf874764.cfg  8pika.tscn-editstate-43f45e8c84235f7d3e3e1bbce5180ac8.cfg  CMakeLists.txt  README.md  build.py  card.cpp  card.hpp  client.cpp  create_recent.Node  editor_layout.cfg  filesystem_cache8  filesystem_update4  map.tscn-editstate-e6d97c4feb736ad10c0d43b3f8310ea4.cfg  menyu.tscn-editstate-0c711fc82caa71a08efebc299c953862.cfg  menyu.tscn-folding-0c711fc82caa71a08efebc299c953862.cfg  player.cpp  player.hpp  project_metadata.cfg  script_editor_cache.cfg  server.hpp  seven_kresty.tscn-editstate-184be1d10981da167f686d116d81248d.cfg  table.cpp  table.hpp  table.tscn-editstate-09815600db89660e01bfb162621828c2.cfg  table.tscn-folding-09815600db89660e01bfb162621828c2.cfg  typing.hpp
naive_impl/: naive_code.cpp
preference_gdextensions_cpp/Preference/: icon.svg.import  main.tscn  project.godot
preference_gdextensions_cpp/demo/: game_server.tscn  icon.svg.import  main.tscn  project.godot  table.tscn
src/: CMakeLists.txt  card.cpp  card.hpp  main.cpp  player.cpp  player.hpp  server.cpp  server.hpp  table.cpp  table.hpp  typing.cpp  typing.hpp
(+11 files in other folders)
